test/Fail/PrintClauseUnderscorePattern.err
PrintClauseUnderscorePattern.agda:9.1-10.19: error: [WithClausePatternMismatch]
With clause pattern d is not an instance of its parent pattern c
when checking that the clause
test _ c _ with D
test x d z | _ = D
has type D → D → D → Set
